syntax = "proto3";

import "validate/validate.proto";

package envoy.config.filter.http.tap.v2alpha;

message Tap {
  // fixfix
  AdminConfig admin_config = 1;
}

message AdminConfig {
  // fixfix
  string config_id = 1 [(validate.rules).string.min_bytes = 1];
}
