syntax = "proto3";

package envoy.data.tap.v2alpha;

// fixfix
message HttpBufferedTrace {
}
